--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
         <!-- <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/styles.css"> -->
 
-        <link rel="stylesheet" href="E:\Courses\Coursera\Web development Course\2_Project\6_ExerciseWeek-3\css\bootstrap.min.css">
-        <link rel="stylesheet" href="E:\Courses\Coursera\Web development Course\2_Project\6_ExerciseWeek-3\css\styles.css">
+        <link rel="stylesheet" href="css\bootstrap.min.css">
+        <link rel="stylesheet" href="css\styles.css">
     
     </head>
 
@@ -89,8 +89,8 @@
     <script src="js/bootstrap.min.js"></script>
     <script src="js/script.js"></script> -->
 
-  <script src="E:\Courses\Coursera\Web development Course\2_Project\6_ExerciseWeek-3\js\jquery-2.1.4.min.js"></script>
-  <script src="E:\Courses\Coursera\Web development Course\2_Project\6_ExerciseWeek-3\js\bootstrap.min.js"></script>
-  <script src="E:\Courses\Coursera\Web development Course\2_Project\6_ExerciseWeek-3\js\script.js"></script>
+  <script src="js\jquery-2.1.4.min.js"></script>
+  <script src="js\bootstrap.min.js"></script>
+  <script src="js\script.js"></script>
 </body>
 </html>
